# ShortsForge

./: .env.example  .gitignore  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  main.py  pyproject.toml  requirements-local.txt  requirements.txt
shorts_generator/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  protocols.py  types.py
shorts_generator/clients/: __init__.py  muapi.py
shorts_generator/stages/: __init__.py  base.py
shorts_generator/stages/download/: __init__.py  muapi.py  ytdlp.py
shorts_generator/stages/highlights/: __init__.py  engine.py
shorts_generator/stages/llm/: __init__.py  local.py  muapi.py
shorts_generator/stages/render/: __init__.py  muapi.py
shorts_generator/stages/render/local/: __init__.py  encoding.py  face_tracking.py  subtitles.py
shorts_generator/stages/transcribe/: __init__.py  muapi.py  whisper.py
