[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shortsforge"
version = "0.1.0"
description = "Turn long-form video into ranked, vertical short-form clips — locally or via API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hashim Amjad" }]
keywords = [
    "youtube-shorts", "video-editing", "whisper", "ollama",
    "mediapipe", "ffmpeg", "ai", "tiktok", "reels",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
local = [
    "yt-dlp>=2024.1.1",
    "faster-whisper>=1.0.0",
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.9",
]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]

[project.scripts]
shortsforge = "shorts_generator.cli:main"

[project.urls]
Homepage = "https://github.com/hashimkk47/ShortsForge"
Repository = "https://github.com/hashimkk47/ShortsForge"
Issues = "https://github.com/hashimkk47/ShortsForge/issues"

[tool.setuptools.packages.find]
include = ["shorts_generator*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length is handled by the formatter
